# pilpilang

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pilpilang.cabal  polar-parse.cabal
.nova/Tasks/: Principal.json
app/: Main.hs
proposals/: type-intersections.md
src/: Common.hs  Conversion.hs  Conversion.md  DBSchema.hs  Syntax.hs  Types.hs  syntax.txt
test/: Spec.hs  SyntaxSpec.hs  TypesSpec.hs  test-foo.hs
test/examples/: chat.pilpil  chat.sql  chat_bad.pilpil  m2m.pilpil  twitter.pilpil
