cabal-version:      2.4
name:               pilpilang
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           An authorization language that targets postgres' RLS policies

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:        https://github.com/VichoReyes/pilpilang/issues

license:            GPL-3.0-or-later
author:             Vicente Reyes
maintainer:         vreyesvaldivieso@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    default-language: Haskell2010
    build-depends:
          containers
        , text
        , megaparsec
        , base >=4.14
        , parser-combinators
        , mtl
    ghc-options:   -Wall
                   -Wcompat
                   -Widentities
                   -Wincomplete-record-updates
                   -Wincomplete-uni-patterns
                   -Wmissing-home-modules
                   -Wpartial-fields
                   -Wredundant-constraints
                   -Wno-unused-do-bind


library
    import:          deps
    exposed-modules: Syntax, Types
    hs-source-dirs:  src

executable pilpilang
    import:           deps
    build-depends:    pilpilang
    main-is:          Main.hs
    hs-source-dirs:   app

Test-Suite pilpilang-test
    import:     deps
    type:       exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:    Spec.hs
    other-modules: SyntaxSpec, TypesSpec
    build-depends: pilpilang, hspec, hspec-megaparsec, QuickCheck
