cabal-version:      2.4
name:               polar-parse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vicente Reyes
maintainer:         vreyesvaldivieso@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends:    containers, text, megaparsec, base >=4.14
    exposed-modules: Types
    hs-source-dirs:   src
    default-language: Haskell2010


executable polar-parse
    main-is:          Main.hs
    build-depends:    containers, text, megaparsec, base >=4.14
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-foo
    type:       exitcode-stdio-1.0
    main-is:    test-foo.hs
    build-depends: base, megaparsec, text, polar-parse
    hs-source-dirs:   test
