cabal-version:      2.4
name:               polar-parse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vicente Reyes
maintainer:         vreyesvaldivieso@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    default-language: Haskell2010
    build-depends:    containers, text, megaparsec, base >=4.14

library
    import:          deps
    exposed-modules: Types
    hs-source-dirs:  src

executable polar-parse
    import:           deps
    main-is:          Main.hs
    hs-source-dirs:   app

Test-Suite test-foo
    import:          deps
    type:       exitcode-stdio-1.0
    main-is:    test-foo.hs
    hs-source-dirs:   test
    build-depends: polar-parse
