cabal-version:      2.4
name:               polar-parse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vicente Reyes
maintainer:         vreyesvaldivieso@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    default-language: Haskell2010
    build-depends:
          containers
        , text
        , megaparsec
        , base >=4.14
        , parser-combinators
    ghc-options:   -Wall
                   -Wcompat
                   -Widentities
                   -Wincomplete-record-updates
                   -Wincomplete-uni-patterns
                   -Wmissing-home-modules
                   -Wpartial-fields
                   -Wredundant-constraints
                   -Wno-unused-do-bind


library
    import:          deps
    exposed-modules: Syntax
    hs-source-dirs:  src

executable polar-parse
    import:           deps
    build-depends:    polar-parse
    main-is:          Main.hs
    hs-source-dirs:   app

Test-Suite Syntax-test
    import:     deps
    type:       exitcode-stdio-1.0
    main-is:    Spec.hs
    hs-source-dirs:   test
    build-depends: polar-parse, hspec, hspec-megaparsec
